@@ -403,7 +403,7 @@
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <extraJvmArgs>-Xss512m -Xmx2048m -XX:MaxPermSize=1024m</extraJvmArgs>
+                    <extraJvmArgs>-Xss512m -Xmx2048m</extraJvmArgs>
                     <modules>
                         <module>org.eclipse.che.ide.IDE</module>
                         <module>org.eclipse.che.ide.ext.java.JavaParserWorker</module>
